2008-01-17  Frederic Peters  <fpeters@0d.be>

	* jhbuild/modtypes/gcjmodule.py, jhbuild/modtypes/gdbmodule.py,
	modulesets/gcj.modules, modulesets/moduleset.dtd: removed broken and
	outdated support for <gcjmodule> and <gdbmodule>.

2008-01-17  Frederic Peters  <fpeters@0d.be>

	* jhbuild/modtypes/__init__.py, jhbuild/modtypes/autotools.py,
	jhbuild/modtypes/cmake.py, jhbuild/modtypes/distutils.py,
	jhbuild/modtypes/linux.py, jhbuild/modtypes/mesa.py,
	jhbuild/modtypes/mozillamodule.py, jhbuild/modtypes/perl.py,
	jhbuild/modtypes/tarball.py, jhbuild/modtypes/testmodule.py,
	jhbuild/modtypes/waf.py, jhbuild/moduleset.py,
	modulesets/gnome-external-deps-2.22.modules: updated <suggests>
	semantic to add the module if it is available, moved poppler-data from
	dependency to suggest of poppler.

2008-01-17  Luca Ferretti  <elle.uca@libero.it>
	
	* modulesets/gnome-2.22.modules: Removed libdaemon-newer and
	avahi-newer, no longer needed 'cause official external deps was bumped.
	Make libepc depends on plain "avahi" module.
	* modulesets/gnome-suites-2.22.modules: Added libepc to totem module
	as suggests.

2008-01-16  Elijah Newren  <newren gmail com>

	* modulesets/gnome-external-deps-2.22.modules:
	Update avahi and libdaemon; see thread at
	http://mail.gnome.org/archives/desktop-devel-list/2008-January/msg00097.html

2008-01-16  Murray Cumming  <murrayc@murrayc.com>

	* modulesets/gnome-suites-2.22.modules: Use gtkmm 2.12 instead of 
	trunk, because GNOME 2.22 will use GTK+ 2.12, not trunk. 

2008-01-16  Frederic Peters  <fpeters@0d.be>

	* doc/C/jhbuild.xml: added rdepends command documentation.

2008-01-16  Frederic Peters  <fpeters@0d.be>

	* doc/C/jhbuild.xml: added sections about cmake and waf module types.

2008-01-16  Frederic Peters  <fpeters@0d.be>

	* modulesets/freedesktop-2.22.modules: added telepathy-salut.
	(closes: #459121)

2008-01-16  Frederic Peters  <fpeters@0d.be>

	* jhbuild/versioncontrol/git.py: fixed git usage when combined with