@@ -1,5 +1,11 @@
 2008-01-17  Frederic Peters  <fpeters@0d.be>
 
+	* jhbuild/errors.py, jhbuild/moduleset.py: rewrote build ordering to
+	get dependency cycle detection (fatal for hard dependencies but quietly
+	ignored for suggests and after).
+
+2008-01-17  Frederic Peters  <fpeters@0d.be>
+
 	* jhbuild/modtypes/gcjmodule.py, jhbuild/modtypes/gdbmodule.py,
 	modulesets/gcj.modules, modulesets/moduleset.dtd: removed broken and
 	outdated support for <gcjmodule> and <gdbmodule>.
